Only add context menu if extension is active
Extension is activated when report.tex is found

--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "menus": {
       "explorer/context": [
         {
-          "command": "vscode-reporter.create_standard_issue"
+          "command": "vscode-reporter.create_standard_issue",
+          "when": "vscode-reporter.active"
         },
         {
-          "command": "vscode-reporter.create_evidence"
+          "command": "vscode-reporter.create_evidence",
+          "when": "vscode-reporter.active"
         }
       ]
     }
