--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "eslint": "^8.16.0",
     "glob": "^8.0.3",
     "mocha": "^10.0.0",
-    "typescript": "^4.7.2",
+    "typescript": "^4.7.2"
+  },
+  "dependencies": {
     "vscode-cache": "^0.3.0"
   }
 }
